added purple boxes

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link type="text/css" href="blk-design-system.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +25,24 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="index-page">
+    
+      <div class="wrapper">
+          <div class="page-header header-filter">
+  
+              <div class="squares square1"></div>
+              <div class="squares square2"></div>
+              <div class="squares square3"></div>
+              <div class="squares square4"></div>
+              <div class="squares square5"></div>
+              <div class="squares square6"></div>
+              <div class="squares square7"></div>
+          
+              <div id="root"></div>
+              <!--<div id="qrPlaceholder"></div>-->
+          </div>
+    </div>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
