--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40965546-12"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-40965546-12');
+  </script>
+
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -25,6 +35,7 @@
 
 <body>
   <div id="root"></div>
+  <!-- TODO: add this to the receive popup view -->
   <div id="qrPlaceholder"></div>
   <noscript>
     You need to enable JavaScript to run this app.</noscript> 
