--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     gtag('config', 'UA-40965546-12');
   </script>
 
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="c7e61eea-e9e2-4bf6-8ea7-b38c8e6931dd";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
